[gd_scene load_steps=15 format=3 uid="uid://bu2eh6bntnl7q"]

[ext_resource type="Script" uid="uid://ofkpqbuwt4g3" path="res://main.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://cwbbehf2dy5uh" path="res://img/stand.svg" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://ugbfuhwrwfpf" path="res://img/oval.svg" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://4wb8bevpcky0" path="res://img/hit.svg" id="2_7mycd"]
[ext_resource type="AudioStream" uid="uid://cdc1yxg2dm212" path="res://sound/chipsCollide1.ogg" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://cki46fagb0uob" path="res://img/double.svg" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://3jrh6uj40657" path="res://img/split.svg" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://cku8saigk67ak" path="res://img/A.svg" id="5_kek77"]
[ext_resource type="Texture2D" uid="uid://c0neefgd02jx3" path="res://img/100.svg" id="8_5vw27"]
[ext_resource type="Texture2D" uid="uid://b4eat37lucw0w" path="res://img/empty_table.jpg" id="10_4c57u"]
[ext_resource type="Script" uid="uid://d03kp68orkfy7" path="res://background.gd" id="11_efxa6"]
[ext_resource type="Script" uid="uid://3nu1wmj0vsn0" path="res://api.gd" id="12_dg77c"]

[sub_resource type="GDScript" id="GDScript_efxa6"]

[sub_resource type="GDScript" id="GDScript_kek77"]
script/source = "extends Label
"

[node name="Main" type="Node"]
script = ExtResource("1_7mycd")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
z_as_relative = false
offset_top = 4.0
offset_right = 1920.0
offset_bottom = 943.0
scale = Vector2(0.6, 0.69)
texture = ExtResource("10_4c57u")
script = ExtResource("11_efxa6")

[node name="chip100" type="Button" parent="."]
y_sort_enabled = true
offset_left = 550.0
offset_top = 546.0
offset_right = 1533.0
offset_bottom = 1529.0
scale = Vector2(0.05, 0.05)
icon = ExtResource("8_5vw27")
script = SubResource("GDScript_efxa6")

[node name="placeBet" type="Button" parent="."]
offset_left = 546.0
offset_top = 441.0
offset_right = 604.0
offset_bottom = 499.0
action_mode = 0
icon = ExtResource("2_5vw27")

[node name="Warning" type="Label" parent="."]
visible = false
offset_left = 15.0
offset_top = 276.0
offset_right = 404.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 36
script = SubResource("GDScript_kek77")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="actions" type="Node" parent="."]

[node name="Stand" type="Button" parent="actions"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 224.8
offset_top = 84.7361
offset_right = 733.6
offset_bottom = 604.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("1_lquwl")

[node name="Hit" type="Button" parent="actions"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 357.8
offset_top = 81.7361
offset_right = 820.6
offset_bottom = 674.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("2_7mycd")

[node name="Double" type="Button" parent="actions"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 580.8
offset_top = 89.736
offset_right = 1049.6
offset_bottom = 609.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("3_272bh")

[node name="Split" type="Button" parent="actions"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 757.8
offset_top = 84.7361
offset_right = 1242.6
offset_bottom = 604.736
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("4_5vw27")

[node name="Insurance" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 284.8
offset_top = -65.264
offset_right = 561.6
offset_bottom = 454.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
theme_override_font_sizes/font_size = 36
icon = ExtResource("5_kek77")
icon_alignment = 1

[node name="scores" type="Node" parent="."]

[node name="totalDealer" type="Label" parent="scores"]
visible = false
offset_left = 529.0
offset_top = 266.0
offset_right = 569.0
offset_bottom = 294.0
text = "0"

[node name="totalPlayer" type="Label" parent="scores"]
visible = false
offset_left = 533.0
offset_top = 486.0
offset_right = 573.0
offset_bottom = 509.0
text = "0"

[node name="totalSplit" type="Label" parent="scores"]
visible = false
offset_left = 277.0
offset_top = 486.0
offset_right = 317.0
offset_bottom = 509.0
text = "0"

[node name="sound" type="Node" parent="."]

[node name="chip" type="AudioStreamPlayer2D" parent="sound"]
position = Vector2(799, 268)
stream = ExtResource("2_kek77")

[node name="stats" type="Node" parent="."]

[node name="numberOfShuffles" type="Label" parent="stats"]
offset_left = 25.0
offset_top = 30.0
offset_right = 102.0
offset_bottom = 53.0
text = "number of shuffles:"

[node name="cardsRemaining" type="Label" parent="stats"]
offset_left = 25.0
offset_top = 60.0
offset_right = 102.0
offset_bottom = 83.0
text = "cards left:"

[node name="totalWinnning" type="Label" parent="stats"]
offset_left = 25.0
offset_top = 90.0
offset_right = 103.0
offset_bottom = 113.0
text = "winnings: "

[node name="winLoss" type="Label" parent="stats"]
offset_left = 25.0
offset_top = 120.0
offset_right = 65.0
offset_bottom = 143.0

[node name="Bet" type="Label" parent="stats"]
offset_left = 96.0
offset_top = 602.0
offset_right = 136.0
offset_bottom = 625.0
text = "Bet"

[node name="Balance" type="Label" parent="stats"]
offset_left = 11.0
offset_top = 600.0
offset_right = 72.0
offset_bottom = 623.0
text = "Balance"

[node name="API" type="Node" parent="."]
script = ExtResource("12_dg77c")

[node name="HTTPRequest" type="HTTPRequest" parent="API"]
